   start box (in elmos) for an ally team.
 - add `Spring.GetFacingFromHeading(number heading) -> number facing` for unit conversion.
   Add `Spring.GetHeadingFromFacing(number facing) -> number heading`, ditto.
 - add `Spring.SetUnitPhysicalStateBit(number unitID, number stateBit) -> Set a unit's PhysicalState.
 - Lua C Macros (cast and registry) prefixed lua_ to fix compilation issues.
 - Protect Spring.GetGroupUnitsCount from crashing when given an invalid group id.


Game Setup:
 - removed `mapSeed` parameter and `new_map_x`, `new_map_y` map generation options. Map is now generated
   blank via 'initBlank' parameter (either 1 or 0) and specifying `blank_map_x`, `blank_map_y`,
   `blank_map_height` map options.
 - Emit a warning instead of immediately failing when MapParser does not find startpos defined in
   the map config for all teamIDs present in start script. This gives a chance to the game to remedy
   the situation and handle startpos itself. In the worst case, teams without a startpos will spawn
   in the corner -- giving an obvious hint that something is amiss and the map is unable to support
   this number of players by itself without assistance from the game.
 - Prevent StartPosSelecter from trying to process mouse clicks while the match is still loading. This
   was able to cause the game to crash on the loading screens.

Misc:
 - Add `/debugvisibility` command for debugging the visible quadfield quads
 - add `system.allowEnginePlayerlist` modrule, defaults to true. If false,
   the built-in `/info` playerlist won't display. Use for anonymous modes
   in conjunction with `Spring.GetPlayerInfo` poisoning.
 - Add new `/remove` cheat-only command, it removes selected units similar to
   `/destroy` except no death script is run (so no explosion nor wreckage).
 - Units no longer clear command queue when shared. This can be implemented gameside with UnitGiven callin.
 - Fix game save/load issue https://github.com/beyond-all-reason/spring/issues/1425